# ChatLLM

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  compile_model.sh  components.json  config.toml  docker-compose.yml  package.json  tailwind.config.js  todo.md  tsconfig.base.json  tsconfig.json  tsconfig.spec.json
.github/: FUNDING.yml
backend/: config.toml
backend/crates/errors/: Cargo.toml
backend/crates/lib/: Cargo.toml
backend/crates/llm-backend/: Cargo.toml
backend/crates/repository/: Cargo.toml
backend/crates/utils/: Cargo.toml
backend/migrations/: 20230811035541_create_users_table.sql  20230811035639_create_user_models_table.sql  20230811035644_create_user_model_messages_table.sql
backend/src/: example.rs
crates/config/: Cargo.toml
crates/config/src/: app.rs  database.rs  lib.rs
crates/errors/src/: api.rs  service.rs
crates/lib/: Cargo.toml
crates/lib/src/: jwt.rs
crates/llm-backend/src/: lib.rs
crates/middleware/src/: jwt.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs  model.rs  user.rs  user_model.rs  user_model_message.rs
crates/repository/: Cargo.toml
crates/repository/src/: user.rs
crates/router/: Cargo.toml
crates/router/src/: auth.rs  chat.rs  error.rs  home.rs  lib.rs  response.rs  users.rs
crates/router/src/middleware/: auth.rs
crates/services/: Cargo.toml
crates/services/src/: auth.rs  chat.rs  error.rs  lib.rs  user.rs
docs/src/: adding-new-models.md  api-examples.md  client-only-method.md  client-server-method.md  compile-to-webassembly.md  compiling-models.md  getting-started.md  index.md  what-is-tolong-ai.md
docs/src/.vitepress/: config.mts
frontend/: .gitignore  .gitmodules  Dockerfile  index.html  next.config.js  nx.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.base.json  tsconfig.json  vite.config.ts
frontend/apps/frontend/: components.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/dev-dist/: sw.js
frontend/libs/counter/: README.md  project.json  vite.config.ts
frontend/libs/web-llm2/: README.md
frontend/scripts/: dev.sh  install.sh
frontend/src/: App.vue  main.ts  types.ts
frontend/src/app/: not-found.tsx  page.tsx
frontend/src/composables/: useDb.ts  useDocument.ts  useLLM.ts  useModel.ts
frontend/src/router/: index.ts
frontend/src/utils/: hf.ts
frontend/src/views/: Home.vue  Models.vue
frontend/static/models/: Llama-2-7b-chat-hf-q4f16_1  RedPajama-INCITE-Chat-3B-v1-q4f32_0  orca_mini_3b-q4f16_1  vicuna-7b-v1.5-16k-q4f16_1
frontend/static2/models/: Llama-2-7b-chat-hf-q4f16_1  Nous-Hermes-Llama2-13b-q4f16_1  Nous-Hermes-llama-2-7b-q4f32_1  RedPajama-INCITE-Chat-3B-v1-q4f16_1
frontend/web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/web/app/: layout.tsx  page.tsx
frontend/web/hooks/: useChat.tsx
frontend/web/public/: manifest.json
frontend2/: bun.lockb  pnpm-lock.yaml
frontend2/web/: .gitignore
frontend2/web/hooks/: useChat.tsx
migrations/: 20230811035541_create_users_table.sql  20230811035638_create_model_table.sql
src/: App.vue  main.rs  web-worker.ts
src/composables/: useModel.ts
src/store/: chat.ts
src/views/: Prompts.vue
(+94 files in other folders)
