[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
sqlx.workspace = true
repository.workspace = true
tracing.workspace = true
models.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
chrono.workspace = true